methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:18: error: not found: value faiveV
    faiveV()
    ^