methods.picture.PictureMono1.scala.code
override def run() {
  def peindreDevant() {
    avance()
    baisseBrosse()
    leveBrosse()
    recule
  }
  def faireV() {
    peindreDevant()
    droite()
    peindreDevant()
    droite()
    peindreDevant()
    retourne()
  }
	for (i <- 1 to 4){
    avance(3)
    faiveV()
    avance(3)
    gauche()
  }


}